[gd_scene load_steps=5 format=3 uid="uid://jv3vh71back8"]

[ext_resource type="Script" path="res://scene/enemy/laser.gd" id="1_dyxk8"]
[ext_resource type="Texture2D" uid="uid://huhhkd4t1n74" path="res://texture/Laser_Center.png" id="1_sdx8e"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oevao"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 26.84
initial_velocity_max = 70.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 7.0
scale_max = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnkim"]
size = Vector2(20, 22)

[node name="laser" type="Node2D"]
script = ExtResource("1_dyxk8")

[node name="laser_center" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(10, 5)
texture = ExtResource("1_sdx8e")
offset = Vector2(0.5, 0)

[node name="laser_particles" type="GPUParticles2D" parent="."]
scale = Vector2(5, 5)
amount = 20
process_material = SubResource("ParticleProcessMaterial_oevao")
lifetime = 0.15

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_nnkim")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
